--- a/notebooks/lab02_data_exploration.ipynb
+++ b/notebooks/lab02_data_exploration.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,22 +191,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "Jw0QWzNgVAOw"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8998, 16)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Check the shape\n"
+    "# Check the shape\n",
+    "df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['age', 'income', 'frq', 'rcn', 'mnt', 'clothes', 'kitchen',\n",
+       "       'small_appliances', 'toys', 'house_keeping', 'dependents',\n",
+       "       'per_net_purchase', 'gender', 'education', 'status', 'description'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# How to get the names of the columns of the data?\n"
+    "# How to get the names of the columns of the data?\n",
+    "df.columns"
    ]
   },
   {
@@ -220,13 +247,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "PjoFnHEhi0Mx"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 8998 entries, 0 to 8997\n",
+      "Data columns (total 16 columns):\n",
+      " #   Column            Non-Null Count  Dtype \n",
+      "---  ------            --------------  ----- \n",
+      " 0   age               8998 non-null   int64 \n",
+      " 1   income            8998 non-null   object\n",
+      " 2   frq               8998 non-null   int64 \n",
+      " 3   rcn               8998 non-null   int64 \n",
+      " 4   mnt               8998 non-null   int64 \n",
+      " 5   clothes           8998 non-null   int64 \n",
+      " 6   kitchen           8998 non-null   int64 \n",
+      " 7   small_appliances  8998 non-null   int64 \n",
+      " 8   toys              8998 non-null   int64 \n",
+      " 9   house_keeping     8998 non-null   int64 \n",
+      " 10  dependents        8998 non-null   object\n",
+      " 11  per_net_purchase  8998 non-null   int64 \n",
+      " 12  gender            8998 non-null   object\n",
+      " 13  education         8998 non-null   object\n",
+      " 14  status            8998 non-null   object\n",
+      " 15  description       8998 non-null   object\n",
+      "dtypes: int64(10), object(6)\n",
+      "memory usage: 1.1+ MB\n"
+     ]
+    }
+   ],
    "source": [
-    "# Check the info\n"
+    "# Check the info\n",
+    "df.info()"
    ]
   },
   {
@@ -259,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "P0gYXIX6WkY9"
    },
@@ -283,9 +341,191 @@
    "metadata": {
     "id": "OC-8gX8Pd05a"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>frq</th>\n",
+       "      <th>rcn</th>\n",
+       "      <th>mnt</th>\n",
+       "      <th>clothes</th>\n",
+       "      <th>kitchen</th>\n",
+       "      <th>small_appliances</th>\n",
+       "      <th>toys</th>\n",
+       "      <th>house_keeping</th>\n",
+       "      <th>per_net_purchase</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>8998.000000</td>\n",
+       "      <td>8998.000000</td>\n",
+       "      <td>8998.000000</td>\n",
+       "      <td>8998.000000</td>\n",
+       "      <td>8998.000000</td>\n",
+       "      <td>8998.000000</td>\n",
+       "      <td>8998.000000</td>\n",
+       "      <td>8998.000000</td>\n",
+       "      <td>8998.000000</td>\n",
+       "      <td>8998.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>1966.059680</td>\n",
+       "      <td>19.848077</td>\n",
+       "      <td>62.469771</td>\n",
+       "      <td>622.162814</td>\n",
+       "      <td>50.446655</td>\n",
+       "      <td>7.039675</td>\n",
+       "      <td>28.524116</td>\n",
+       "      <td>7.036897</td>\n",
+       "      <td>6.929984</td>\n",
+       "      <td>42.428984</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>17.296552</td>\n",
+       "      <td>10.903435</td>\n",
+       "      <td>69.761802</td>\n",
+       "      <td>646.768205</td>\n",
+       "      <td>23.422249</td>\n",
+       "      <td>7.848139</td>\n",
+       "      <td>12.586437</td>\n",
+       "      <td>7.924422</td>\n",
+       "      <td>7.882655</td>\n",
+       "      <td>18.495742</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1936.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1951.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>26.000000</td>\n",
+       "      <td>63.000000</td>\n",
+       "      <td>33.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>28.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>1966.000000</td>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>53.000000</td>\n",
+       "      <td>383.000000</td>\n",
+       "      <td>51.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>45.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1981.000000</td>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>79.000000</td>\n",
+       "      <td>1076.000000</td>\n",
+       "      <td>69.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>37.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>57.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1996.000000</td>\n",
+       "      <td>59.000000</td>\n",
+       "      <td>549.000000</td>\n",
+       "      <td>3052.000000</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>75.000000</td>\n",
+       "      <td>74.000000</td>\n",
+       "      <td>62.000000</td>\n",
+       "      <td>77.000000</td>\n",
+       "      <td>88.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               age          frq          rcn          mnt      clothes  \\\n",
+       "count  8998.000000  8998.000000  8998.000000  8998.000000  8998.000000   \n",
+       "mean   1966.059680    19.848077    62.469771   622.162814    50.446655   \n",
+       "std      17.296552    10.903435    69.761802   646.768205    23.422249   \n",
+       "min    1936.000000     3.000000     0.000000     6.000000     1.000000   \n",
+       "25%    1951.000000    10.000000    26.000000    63.000000    33.000000   \n",
+       "50%    1966.000000    17.000000    53.000000   383.000000    51.000000   \n",
+       "75%    1981.000000    28.000000    79.000000  1076.000000    69.000000   \n",
+       "max    1996.000000    59.000000   549.000000  3052.000000    99.000000   \n",
+       "\n",
+       "           kitchen  small_appliances         toys  house_keeping  \\\n",
+       "count  8998.000000       8998.000000  8998.000000    8998.000000   \n",
+       "mean      7.039675         28.524116     7.036897       6.929984   \n",
+       "std       7.848139         12.586437     7.924422       7.882655   \n",
+       "min       0.000000          1.000000     0.000000       0.000000   \n",
+       "25%       2.000000         19.000000     2.000000       2.000000   \n",
+       "50%       4.000000         28.000000     4.000000       4.000000   \n",
+       "75%      10.000000         37.000000    10.000000       9.000000   \n",
+       "max      75.000000         74.000000    62.000000      77.000000   \n",
+       "\n",
+       "       per_net_purchase  \n",
+       "count       8998.000000  \n",
+       "mean          42.428984  \n",
+       "std           18.495742  \n",
+       "min            4.000000  \n",
+       "25%           28.000000  \n",
+       "50%           45.000000  \n",
+       "75%           57.000000  \n",
+       "max           88.000000  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Check the descriptive statics\n"
+    "# Check the descriptive statics\n",
+    "df.describe()\n",
+    "# tentar tirar valores que possam ser interessantes (average)\n",
+    "# tentar encontrar valores inconsistentes "
    ]
   },
   {
@@ -1083,7 +1323,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "DM2526",
    "language": "python",
    "name": "python3"
   },
@@ -1097,7 +1337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.11"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
